--- a/backend/static/index.css
+++ b/backend/static/index.css
@@ -4,6 +4,11 @@ a {
 
 #code{ font-size:0.8em; padding:.5em; width: 200px; }
 
+#white-standard{
+    background-color: white;
+    color: black;
+}
+
 body {
     background: rgba(0, 0, 0, 0.9);
     font-family: "Courier New";
@@ -16,6 +21,7 @@ form {
     width: 450px;
     height: 50px;
     border: 4px dashed #fff;
+    /* border: 4px dashed #fff; */
 }
 
 form:hover {
