--- a/backend/static/index.css
+++ b/backend/static/index.css
@@ -7,6 +7,7 @@ a {
 #white-standard{
     background-color: white;
     color: black;
+    
 }
 
 body {
@@ -20,8 +21,6 @@ form {
     width: 50%;
     width: 450px;
     height: 50px;
-    border: 4px dashed #fff;
-    /* border: 4px dashed #fff; */
 }
 
 form:hover {
@@ -33,12 +32,12 @@ form p {
 }
 
 form input {
-    margin: 0;
+    margin: 0px;
     padding: 0;
     width: 450px;
-    height: 50px;
+    height: 100px;
+
     outline: none;
-    opacity: 0;
 }
 
 body form button {
@@ -46,9 +45,8 @@ body form button {
     color: #fff;
     background: #16a085;
     border: none;
-    width: 450px;
+    width: 407px;
     height: 35px;
-    margin-left: -4px;
     border-radius: 4px;
     border-bottom: 4px solid #117A60;
     transition: all .2s ease;
